# scoggle-gen

./: Cargo.toml  README.md  bin-it.sh  todo.md
.github/workflows/: build-linux.yml  build-macos.yml  release-linux.yml  release-macos.yml
src/: export.rs  main.rs  model.rs  sbt.rs  term.rs
