[package]
name = "scoggle-gen"
version = "0.1.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.1"
uuid = { version = "0.8", features =  ["v4"] }
clap = "3"
ansi_term = "0.12"
